tests/error/wrongAddition.tpc
int main(void){
	char * a;
	int * b;
	return b + a;
}